# obsidian-lyx-math-native

./: .gitignore  BUILDING.md  README.md  README.zh-CN.md  RELEASE_CHECKLIST.md  THIRD_PARTY_NOTICES.md  main.js  manifest.json  package.json  styles.css
.github/workflows/: release.yml
native/lyx-mathd/: CMakeLists.txt  LYX_MATHED_PORT.md
native/lyx-mathd/src/: lyx_stubs.cpp  main.cpp
patches/: lyx-2.5.1-mathd-cmake.patch
scripts/: build-lyx-core.js  configure-lyx-build.js  configure-native-lyx.js  create-release-zip.js  create-source-tarball.js  lyx-paths.js  package-macos-app.js  package-native.js  package-support.js
src/: native_client.js
tests/: native_protocol.test.mjs
